--- a/commands/templates/create_permission_user_table.mustache
+++ b/commands/templates/create_permission_user_table.mustache
@@ -10,6 +10,8 @@ class PermissionUserTableSchema extends Schema {
       table.foreign('permission_id').references('id').on('permissions').onDelete('cascade')
       table.integer('user_id').unsigned().index()
       table.foreign('user_id').references('id').on('users').onDelete('cascade')
+      table.integer('contex_id').unsigned().index()
+      table.foreign('contex_id').references('id').on('acl_contexts').onDelete('cascade')
       table.timestamps()
     })
   }
